--- a/netlify.toml
+++ b/netlify.toml
@@ -12,9 +12,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self' https://*; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://unpkg.com https://esm.sh https://*.supabase.co https://fonts.googleapis.com https://fonts.gstatic.com https://*; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net https://unpkg.com https://*; font-src 'self' data: https://fonts.gstatic.com https://*; img-src 'self' data: blob: https://*; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://* wss://*; media-src 'self' https://* blob:; frame-src 'self' https://*; object-src 'none'; base-uri 'self'; frame-ancestors 'self';"
     
 [[headers]]
   for = "/*.js"
@@ -25,3 +23,4 @@
   for = "/*.css"
   [headers.values]
     Content-Type = "text/css; charset=UTF-8"
+
